fix: fixed layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -86,9 +86,9 @@ main {
   border-radius: 6px;
   font-family: Inter;
   padding: 16px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
+  display: grid;
+  grid-template: 1fr 1fr / 18px 1fr;
+  gap: 0 12px;
 }
 
 .banner-icon {
@@ -101,15 +101,10 @@ main {
   height: 15px;
 }
 
-.banner-content {
-  width: 832px;
-  height: 48px;
-}
-
 .banner-title,
 .banner-text {
   font-size: 0.875rem;
-  text-align: left;
+  width: 832px;
 }
 
 .banner-title {
@@ -122,6 +117,7 @@ main {
   font-weight: 400;
   color: black;
   margin: 0;
+  grid-column: 2 / 3;
 }
 
 /* Banner Varaint for multi line or single line */
